--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
         android:label="dostavka"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyC5YxkEJq2dzoEr6BjvK629cJdD4iHM2gs"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -20,9 +24,11 @@
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
               />
+              
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+                <!-- <uses-permission android:name="android.permission.INTERNET"/> -->
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
