--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,23 @@ dependencies:
   provider: ^6.0.2
   iconsax:
   qr_code_scanner: ^0.7.0
+  flutter_barcode_scanner: ^2.0.0
 
   flutter_phone_direct_caller:
   image_picker:
+
+  intl: ^0.17.0
+
+  grouped_list: ^4.2.0
+  
+  mask_text_input_formatter: ^2.1.0
+
+  google_maps_flutter: ^2.1.3
+  geolocator: ^8.2.0
+  permission_handler: ^9.2.0
+
+  translator: ^0.1.7
+
 
 dev_dependencies:
   flutter_test:
